# SOP-Rejestracja_lekarz_pacjent

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Patients  README.md
Documentation/: Protocol.md
src/Doctor/: doctor.c  doctor.h  doctor_func.c
src/Patient/: patient.c  patient.h  patient_func.c
src/Registration/: lista.c  lista.h  registration.c  registration.h  registration_func.c
src/Shared/: client.c  client.h  header.h  message_types.h  messages.h  printer.c
